--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-youtube",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -30,7 +30,7 @@
     "express": "^4.8.5",
     "glob": "^4.0.5"
   },
-  "description": "An Ember.js component for controlling YouTube videos using the iframe api",
+  "description": "A simple Ember.js component to play and control single YouTube videos using the iframe API.",
   "keywords": [
     "ember-addon",
     "youtube",
