--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.0",
-    "ember-cli": "0.2.0-beta.1",
+    "ember-cli": "0.2.0",
     "ember-cli-babel": "^4.0.0",
     "ember-cli-app-version": "0.3.1",
     "ember-cli-dependency-checker": "0.0.7",
@@ -32,6 +32,9 @@
     "ember-export-application-global": "^1.0.2",
     "express": "^4.8.5",
     "glob": "^4.0.5"
+  },
+  "dependencies": {
+      "rimraf":"2.2.8"
   },
   "keywords": [
     "ember-addon",
