--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
     "ember-resolver": "~0.1.15",
     "jquery": "^1.11.1",
     "loader.js": "ember-cli/loader.js#3.2.0",
-    "qunit": "~1.17.1"
+    "qunit": "~1.17.1",
+    "moment": "2.10.3",
+    "moment-duration-format": "1.3.0"
   }
 }
