--- a/bower.json
+++ b/bower.json
@@ -14,8 +14,6 @@
     "ember-resolver": "~0.1.20",
     "jquery": "^1.11.3",
     "loader.js": "ember-cli/loader.js#3.4.0",
-    "qunit": "~1.20.0",
-    "moment": "2.10.3",
-    "moment-duration-format": "1.3.0"
+    "qunit": "~1.20.0"
   }
 }
