--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,7 @@ matrix:
     - env: EMBER_TRY_SCENARIO=ember-canary
 
 before_install:
-  - "npm install -g npm@^3"
-  - npm config -set spin false
+  - npm config set spin false
   - npm install -g bower
   - npm install phantomjs-prebuilt
   - node_modules/phantomjs-prebuilt/bin/phantomjs --version
