--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-youtube",
-  "version": "0.7.0",
+  "version": "0.8.0-beta.0",
   "description": "A simple Ember.js component to play and control single YouTube videos using the iframe API.",
   "directories": {
     "doc": "doc",
