--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,9 @@
+# EditorConfig helps developers define and maintain consistent
+# coding styles between different editors and IDEs
+# editorconfig.org
+
 root = true
+
 
 [*]
 indent_style = tab
