--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ember-cli-qunit": "^4.1.1",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-uglify": "^2.0.0",
+    "ember-concurrency": "^0.8.18",
     "ember-disable-prototype-extensions": "^1.1.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
