--- a/package.json
+++ b/package.json
@@ -9,24 +9,20 @@
     "player"
   ],
   "license": "MIT",
-  "author": "",
-  "directories": {
-    "doc": "doc",
-    "test": "tests"
-  },
   "repository": "https://github.com/oskarrough/ember-youtube",
   "scripts": {
     "build": "ember build --environment=production",
     "lint:js": "eslint ./*.js addon addon-test-support app config lib server test-support tests",
     "start": "ember serve",
     "test": "ember try:each",
-    "deploy-surge": "mv dist/index.html dist/200.html; surge dist ember-youtube.surge.sh"
+    "deploy-surge": "mv dist/index.html dist/200.html; surge dist ember-youtube.surge.sh",
+    "prettier": "prettier --write addon/**/* app/**/*"
   },
   "dependencies": {
     "ember-cli-babel": "^6.6.0",
-    "ember-concurrency": "^0.8.18",
     "ember-cli-htmlbars": "^2.0.1",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.0"
+    "ember-cli-htmlbars-inline-precompile": "^1.0.0",
+    "ember-concurrency": "^0.8.18"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
@@ -47,7 +43,8 @@
     "ember-try": "^0.2.23",
     "eslint-plugin-ember": "^5.0.0",
     "eslint-plugin-node": "^5.2.1",
-    "loader.js": "^4.2.3"
+    "loader.js": "^4.2.3",
+    "prettier": "1.17.0"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
